<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/holo_blue_light">
    <ImageView
        android:id="@+id/fields"
        android:contentDescription="@string/icon_question2_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/forest256"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/imageMarginTop"/>
    <!--Icon by Freepik from www.flaticon.com-->

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/fields"
        android:layout_marginTop="@dimen/cardview2_top"
        android:layout_marginLeft="@dimen/cardview_margin_side"
        android:layout_marginRight="@dimen/cardview_margin_side"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="@dimen/cardview_cornerradius"
        app:cardElevation="@dimen/cardview_elevation">

    <TextView
        android:id="@+id/question2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/question_text_margin_top"
        android:layout_marginLeft="@dimen/q2_text_margin_side"
        android:layout_marginRight="@dimen/q2_text_margin_side"
        android:text="@string/question2"
        android:textSize="@dimen/question_text_size"
        android:fontFamily="@font/delius_swash_caps"
        android:textColor="@android:color/secondary_text_light"
        android:textAlignment="center"/>
     <EditText
         android:id="@+id/answer_field"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:layout_marginLeft="@dimen/answer_margin_left"
         android:layout_marginRight="@dimen/answer_margin_left"
         android:layout_marginTop="@dimen/edittext_margin_top"
         android:layout_marginBottom="@dimen/edittext_margin_bottom"
         android:hint="@string/hint"
         android:inputType="text"
         android:fontFamily="@font/delius_swash_caps"
         android:onClick="CheckUserInput"/>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/nextButton_margin_bottom"
        android:text="@string/next"
        android:textSize="@dimen/ButtonTextSize"
        android:fontFamily="@font/delius_swash_caps"
        android:background="@android:color/white"
        android:onClick="GoToQuestion3"/>

</RelativeLayout>